/*
 * $Id: ChangeLog,v 1.2759 2004/04/05 22:38:25 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-06 04:01 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/contrib/libct/files.c
    * enable osToHarbourMask() for OS_UNIX_COMPATIBLE

  * xharbour/source/rtl/bkgtsks.c
    * removed two unnecessary HB_THREAD_STUB

  * xharbour/source/rtl/filestat.c
  * xharbour/source/rtl/fserror.c
  * xharbour/source/rtl/fssize.c
  * xharbour/source/rtl/fstemp.c
  * xharbour/source/rtl/hbffind.c
  * xharbour/source/rtl/hboutdbg.c
    * next file IO and fsError changes

  * xharbour/source/rtl/filesys.c
    ! hb_fsCreateEx() use now WinAPI,
    + added convert_create_flags() for WinAPI, 
    * some next fsError changes

I've tested the changes in Linux and DOS (DJGPP, OpenWatcom) - please
test it in Windows.

2004-04-05 19:45 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/direct.c
    ! fixed function directoryrecurse() to work on *nix

2004-04-06 05:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/filesys.c
    ! typo on trace info convert_create_flags -> convert_create_flags_ex
    ! define convert_create_flags() only when HB_FS_FILE_IO is defined and
      HB_WIN32_IO is not defined.
  * source/rtl/fserror.c
    ! define hb_errnoToDosError() only when HB_WIN32_IO is not defined
  * source/compiler/hbpcode.c
    ! function hb_compStrongType(): mark iSize as unused.
  * source/rtl/gtwvt/gtwvt.c
    ! remmed unused variable: iScanCode in line 1983

2004-04-05 22:36 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
  * source/rtl/bkgtsks.c
    * fixed typo ( HB_THRAED_OPTIMIZE_STACK -> HB_THREAD_OPTIMIZE_STACK )
      and added HB_THREAD_STUB in HB_BACKGROUNDRUN.
      Thanks to Sylvain Robert
